-
Bug
-
Resolution: Done
-
P2: Important
-
5.11.2
-
None
-
-
d4e937a6280f34bc1cce8c8cea3806a741312fbc (qt/qtbase/5.11)
SUMMARY:
When opening nearly all applications, but mainly seen with Dolphin, there is a noticeable 0.5s stutter where the entire system (mouse included) freezes. The animation of the window opening is then laggy (loss of FPS) whilst the application opens. Opening another instance of the same app then causes no issues, and the issue seems quite random (sometimes it's noticable, other times it's not.
STEPS TO REPRODUCE
1. Open Dolphin from Pinned Task in Task Manager, or via Baloo / Menu
OBSERVED RESULT
Micro stutter whilst the application loads
EXPECTED RESULT
Seamless and smooth open of application without stutter
SOFTWARE VERSIONS
KDE Plasma Version: 5.13.5
KDE Frameworks Version: 5.50.0
Qt Version: 5.11.2
ADDITIONAL INFORMATION
Intel HD Graphics 640 on Intel Corei5 7200U Processor. MODSET Drivers are worse, xf86-video-intel mitigates the issue somewhat.
Tested on Archlinux and Manjaro. Issue is present on both systems running the same versions listed above. Seems that this issue only occurred for me after the 5.13.5 update roughly 3 days ago.
Edit: this seems to also affect Manjaro as well as Arch / Antetgos, both on 5.11.2 of QT. Downgrading to 5.11.1 fixes the issue but may have other unforseen issues. The above was reported to KDE first before it was identified to affect more than just KDE.
KDE Developers asked for this to be opened.
- relates to
-
QTBUG-72785 [regression] Freezes cursor - applications lag
-
- Closed
-
-
QTBUG-70749 Creating a QApplication with Qt5.11.2 blocks for a very short time any other QApplication running at Ubuntu
-
- Closed
-
| For Gerrit Dashboard: QTBUG-70760 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 241002,7 | xcb: Don't get initial screen rotation | 5.11 | qt/qtbase | Status: MERGED | +2 | 0 |