src/plugins/platforms/xcb/qxcbscreen.h
@@ -220,7 +220,7 @@ private:
     xcb_randr_crtc_t m_crtc;
     xcb_randr_mode_t m_mode = XCB_NONE;
     bool m_primary = false;
-    uint8_t m_rotation = XCB_RANDR_ROTATION_ROTATE_0;
+    uint8_t m_rotation = 0;
 
     QString m_outputName;
     QSizeF m_outputSizeMillimeters;
